@@ -27,9 +27,9 @@
 	</organization>
 
 	<scm>
-		<connection>scm:svn:http://svn.openmrs.org/openmrs/branches/1.9.x</connection>
-		<developerConnection>scm:svn:http://svn.openmrs.org/openmrs/branches/1.9.x</developerConnection>
-		<url>http://svn.openmrs.org/openmrs/branches/1.9.x</url>
+		<connection>scm:git:https://github.com/openmrs/openmrs-core</connection>
+		<developerConnection>scm:git:https://github.com/openmrs/openmrs-core</developerConnection>
+		<url>https://github.com/openmrs/openmrs-core</url>
 	</scm>
 
 	<modules>
@@ -649,6 +649,11 @@
 				<artifactId>powermock-api-mockito</artifactId>
 				<version>1.4.10</version>
 			</dependency>
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-all</artifactId>
+                <version>1.3</version>
+            </dependency>
 			<dependency>
 				<groupId>org.databene</groupId>
 				<artifactId>databene-benerator</artifactId>
@@ -729,17 +734,12 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>buildnumber-maven-plugin</artifactId>
-					<version>1.0</version>
+					<version>1.1</version>
 					<configuration>
-						<doCheck>false</doCheck>
-						<doUpdate>false</doUpdate>
-						<getRevisionOnlyOnce>true</getRevisionOnlyOnce>
 						<buildNumberPropertyName>revisionNumber</buildNumberPropertyName>
+						<getRevisionOnlyOnce>true</getRevisionOnlyOnce>
 						<revisionOnScmFailure>0</revisionOnScmFailure>
-						<useLastCommittedRevision>true</useLastCommittedRevision>
-						<providerImplementations>
-							<svn>javasvn</svn>
-						</providerImplementations>
+						<shortRevisionLength>6</shortRevisionLength>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -933,7 +933,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<argLine>-Duser.language=en -Duser.region=US ${customArgLineForTesting}</argLine>
+					<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
